- Detectors:
	-Can now set targeting camera slew rate using "traverseRate" field in ModuleTargetingCamera.
- Weapons:
	- Fixes for initial bullet placement and simulated hit position when Krakensbane is not active.
  	- Missiles:
		- Fix clustermissiles launching copies of themselves instead of submunitions.
		- Fix Guidance Type None missiles not holding course.
		- GPS missiles now require radar lock or target cam for GPS coords.
		- INS missiles can now use either radar or IRST tracking.
		- INS missiles now have datalink capability for mid-flight target coordinate updates, update rate clamped to Radar/IRST scan speed.
		- Fix error with Inertial guidance target prediction for non-updating missiles.
- Vessel Mover:
	- Check for outdated loadMeta files when refreshing the craft list in the vessel selection window and update them since KSP doesn't update them when you save your craft!
	- Fix the spawn point selection sometimes not registering.
- ModIntegration:
	- Fixes for inhibiting CameraTools when initial spawning during continuous spawning and disable auto-switching to newly spawned craft joining the competition.

v1.6.8.0
IMPROVEMENTS / FIXES
- General:
	- Add tracking of 'named modules' (from non-dependency DLLs) to the VesselModuleRegistry.
	- Optimise "Vector3.Distance(from, to) < dist" type checks.
- UI:
	- rcsOverride enabled ECMJammers now properly affect RCS in the SPH/VAB RCS GUI.
	- Fix Equivalent Armor Thickness readout in the Armor GUI.
	- Fix custom ammobelt UI overwriting belts on heterogeneous weapon groups.
- AI / WM:
	- AI GUI fixes for surface AI.
	- Fix AI disengagement from launched nuclear/EMP ordinance if within projected blast radius.
	- Expose the weave strength factor as a tunable parameter for the surface and VTOL AI.
	- AI will now toggle/disable ECM Jammers if under fire from GPS/antiradiation ordinance.
	- Adjust the off-boresight angles for DLZ checks for extending to prevent super long-range extends.