@@ -1064,13 +1064,44 @@ namespace BDArmory.Weapons.Missiles
             {
                 SourceVessel = vessel;
             }
-            if (multiLauncher && multiLauncher.isMultiLauncher)
+            if (multiLauncher)
             {
-                //multiLauncher.rippleRPM = wpm.rippleRPM;               
-                //if (wpm.rippleRPM > 0) multiLauncher.rippleRPM = wpm.rippleRPM;
-                multiLauncher.Team = Team;
-                if (reloadableRail && reloadableRail.ammoCount >= 1 || BDArmorySettings.INFINITE_ORDINANCE) multiLauncher.fireMissile();
-                if (BDArmorySettings.DEBUG_MISSILES) Debug.Log($"[BDArmory.MissileLauncher]: firing Multilauncher! {vessel.vesselName}; {multiLauncher.subMunitionName}");
+                if (multiLauncher.isMultiLauncher)
+                {
+                    //multiLauncher.rippleRPM = wpm.rippleRPM;               
+                    //if (wpm.rippleRPM > 0) multiLauncher.rippleRPM = wpm.rippleRPM;
+                    multiLauncher.Team = Team;
+                    if (reloadableRail && reloadableRail.ammoCount >= 1 || BDArmorySettings.INFINITE_ORDINANCE) multiLauncher.fireMissile();
+                    if (BDArmorySettings.DEBUG_MISSILES) Debug.Log($"[BDArmory.MissileLauncher]: firing Multilauncher! {vessel.vesselName}; {multiLauncher.subMunitionName}");
+                }
+                else //isClusterMissile
+                {
+                    if (reloadableRail && (reloadableRail.maxAmmo > 1 && (reloadableRail.ammoCount >= 1 || BDArmorySettings.INFINITE_ORDINANCE))) //clustermissile with reload module
+                    {
+                        if (reloadableMissile == null) reloadableMissile = StartCoroutine(FireReloadableMissile());
+                        launched = true;
+                    }
+                    else //standard non-reloadable missile
+                    {
+                        multiLauncher.missileSpawner.MissileName = multiLauncher.subMunitionName;
+                        multiLauncher.missileSpawner.UpdateMissileValues();
+                        DetonationDistance = multiLauncher.clusterMissileTriggerDist;
+                        blastRadius = multiLauncher.clusterMissileTriggerDist;
+                        multiLauncher.isLaunchedClusterMissile = true;
+                        TimeFired = Time.time;
+                        part.decouple(0);
+                        part.Unpack();
+                        TargetPosition = vessel.ReferenceTransform.position + vessel.ReferenceTransform.up * 5000; //set initial target position so if no target update, missileBase will count a miss if it nears this point or is flying post-thrust
+                        MissileLaunch();
+                        BDATargetManager.FiredMissiles.Add(this);
+                        if (wpm != null)
+                        {
+                            wpm.heatTarget = TargetSignatureData.noTarget;
+                            GpsUpdateMax = wpm.GpsUpdateMax;
+                        }
+                        launched = true;
+                    }
+                }
             }
             else
             {
@@ -1084,7 +1115,7 @@ namespace BDArmory.Weapons.Missiles
                     TimeFired = Time.time;
                     part.decouple(0);
                     part.Unpack();
-                        TargetPosition = (multiLauncher ? vessel.ReferenceTransform.position + vessel.ReferenceTransform.up * 5000 : transform.position + transform.forward * 5000); //set initial target position so if no target update, missileBase will count a miss if it nears this point or is flying post-thrust
+                    TargetPosition = transform.position + transform.forward * 5000; //set initial target position so if no target update, missileBase will count a miss if it nears this point or is flying post-thrust
                     MissileLaunch();
                     BDATargetManager.FiredMissiles.Add(this);
                     if (wpm != null)
